@@ -119,7 +119,7 @@ class Smarty extends Smarty_Internal_TemplateBase
     /**
      * smarty version
      */
-    const SMARTY_VERSION = '3.1.28-dev/56';
+    const SMARTY_VERSION = '3.1.28-dev/57';
 
     /**
      * define variable scopes
