@@ -2,6 +2,7 @@
  14.09.2015
   - optimize autoloader
   - optimize subtemplate handling
+  - update template inheritance processing
   
  30.08.2015
   - size optimization move some runtime functions into extension
